--- a/src/patternfly/assets/fontawesome/_variables.scss
+++ b/src/patternfly/assets/fontawesome/_variables.scss
@@ -1,6 +1,7 @@
 // Variables
 // --------------------------
 @use 'sass:math';
+@use 'sass:string';
 
 $fa-font-size-base:           16px !default;
 $fa-css-prefix:               'fa' !default;
@@ -12,7 +13,7 @@ $fa-fw-width:                 math.div(20em, 16);
 $pf-v6-global--disable-fontawesome: false !default;
 // Convenience function used to set content property
 @function fa-content($fa-var) {
-  @return unquote("\"#{ $fa-var }\"");
+  @return string.unquote("\"#{ $fa-var }\"");
 }
 
 $fa-var-500px: \f26e;
