--- a/src/patternfly/components/Table/table.scss
+++ b/src/patternfly/components/Table/table.scss
@@ -716,7 +716,7 @@
   --#{$table}--cell--MinWidth: 0;
   --#{$table}--cell--Width: 1%;
 
-  max-width: none;
+  max-width: fit-content;
 }
 // stylelint-enable
 
