--- a/src/patternfly/demos/Table/table-manage-cols-data-list.hbs
+++ b/src/patternfly/demos/Table/table-manage-cols-data-list.hbs
@@ -1,4 +1,4 @@
-{{#> data-list data-list--modifier="pf-m-compact" data-list-item--modifier="pf-m-draggable" data-list--id="table-manage-columns-data-list-draggable" data-list--attribute='aria-label="Draggable data list rows"'}}
+{{#> data-list data-list--IsCompact=true data-list-item--modifier="pf-m-draggable" data-list--id="table-manage-columns-data-list-draggable" data-list--attribute='aria-label="Draggable data list rows"'}}
   {{#> data-list-item data-list-item--id="item-1"}}
     {{#> data-list-item-row}}
       {{#> data-list-item-control}}
