fix(expandable section): updated white-space

--- a/src/patternfly/components/ExpandableSection/expandable-section.scss
+++ b/src/patternfly/components/ExpandableSection/expandable-section.scss
@@ -76,6 +76,11 @@
       // stylelint-enable
       overflow: hidden;
     }
+
+    .#{$truncate}__start,
+    .#{$truncate}__end {
+      white-space: nowrap;
+    }
   }
 }
 
