--- a/src/patternfly/components/Table/templates/table-tbody--expandable.hbs
+++ b/src/patternfly/components/Table/templates/table-tbody--expandable.hbs
@@ -27,7 +27,7 @@
   {{#> table-tr table-tr--IsExpandable=true}}
     {{> table-cell-empty}}
     {{> table-cell-empty}}
-    {{#> table-td table-td--attribute=(concat 'colspan="4" id="' table--id '-content' table-tbody--expandable--index '"')}}
+    {{#> table-td table-td--attribute=(concat 'colspan="4" id="' table--id '-content-' table-tbody--expandable--index '"')}}
       {{#> table-expandable-row-content}}
         Expandable content
       {{/table-expandable-row-content}}
